@@ -18,5 +18,6 @@ Depends: ${misc:Depends}, ${python3:Depends},
 Description: PostgreSQL streaming backup service
  PGhoard is a PostgreSQL streaming backup service.  Backups are stored in
  encrypted and compressed format in a cloud object storage.  PGHoard
- currently supports Amazon Web Services S3, Google Cloud Storage and Ceph.
- Support for Windows Azure and OpenStack Swift is experimental.
+ currently supports Amazon Web Services S3, Google Cloud Storage, OpenStack
+ Swift and Ceph (using S3 or Swift interfaces with RadosGW.)
+ Support for Windows Azure is experimental.
