@@ -13,9 +13,11 @@ BuildRequires:  python3-flake8, python3-pytest, python3-pylint, python3-devel
 BuildArch:      noarch
 
 %description
-pghoard is a PostgreSQL streaming backup service allowing the compression
-and encryption of backup files. Also transfer of backup files to an object
-storage is supported.
+PGhoard is a PostgreSQL streaming backup service.  Backups are stored in
+encrypted and compressed format in a cloud object storage.  PGHoard
+currently supports Amazon Web Services S3, Google Cloud Storage, OpenStack
+Swift and Ceph (using S3 or Swift interfaces with RadosGW.)
+Support for Windows Azure is experimental.
 
 
 %prep
