@@ -1,6 +1,7 @@
 pghoard 1.0.1 (2016-XX-XX)
 ==========================
 
+* Support for OpenStack Swift object storage
 * More generic object storage configuration.  All configuration keys for
   object stores are passed as-is to the implementation.  This also meant
   that some defaults were dropped: bucket_name and container_name must be
